--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
         <link rel="stylesheet" href="assets/css/animate.css">
         <link rel="stylesheet"href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
     </head>
-
     <body>
         <!-- ***** Preloader Start ***** -->
         <div id="js-preloader" class="js-preloader">
@@ -400,17 +399,17 @@
                                                         </div>
                                                         <div class="carousel-inner">
                                                             <div class="carousel-item active">
-                                                                <img src="assets/images/office-head-1.jpg"
+                                                                <img src="assets/images/t1.jpg"
                                                                     class="d-block w-100" alt="本社オフィス1"
                                                                     style="height: 300px; object-fit: cover; border-radius: 10px;">
                                                             </div>
                                                             <div class="carousel-item">
-                                                                <img src="assets/images/office-head-2.jpg"
+                                                                <img src="assets/images/t2.jpg"
                                                                     class="d-block w-100" alt="本社オフィス2"
                                                                     style="height: 300px; object-fit: cover; border-radius: 10px;">
                                                             </div>
                                                             <div class="carousel-item">
-                                                                <img src="assets/images/office-head-3.jpg"
+                                                                <img src="assets/images/t3.jpg"
                                                                     class="d-block w-100" alt="本社オフィス3"
                                                                     style="height: 300px; object-fit: cover; border-radius: 10px;">
                                                             </div>
@@ -435,12 +434,6 @@
                                                         <p>東京都新宿区西新宿2丁目4番1号
                                                             新宿NSビル25階に位置する本社では、管理部門、企画推進室、営業部が一体となって事業を展開しています。最新の設備と快適な環境で、社員一人ひとりが力を発揮できる職場を提供しています。
                                                         </p>
-                                                        <div class="icon-button">
-                                                            <a href="#" data-bs-toggle="modal"
-                                                                data-bs-target="#headOfficeModal"><i
-                                                                    class="fa fa-info-circle"></i>
-                                                                詳細を見る</a>
-                                                        </div>
                                                     </div>
                                                 </div>
                                             </div>
@@ -475,17 +468,22 @@
                                                         </div>
                                                         <div class="carousel-inner">
                                                             <div class="carousel-item active">
-                                                                <img src="assets/images/office-shizuoka-1.jpg"
+                                                                <img src="assets/images/s1.jpg"
                                                                     class="d-block w-100" alt="静岡支社1"
                                                                     style="height: 300px; object-fit: cover; border-radius: 10px;">
                                                             </div>
                                                             <div class="carousel-item">
-                                                                <img src="assets/images/office-shizuoka-2.jpg"
+                                                                <img src="assets/images/s2.jpg"
                                                                     class="d-block w-100" alt="静岡支社2"
                                                                     style="height: 300px; object-fit: cover; border-radius: 10px;">
                                                             </div>
                                                             <div class="carousel-item">
-                                                                <img src="assets/images/office-shizuoka-3.jpg"
+                                                                <img src="assets/images/s3.jpg"
+                                                                    class="d-block w-100" alt="静岡支社3"
+                                                                    style="height: 300px; object-fit: cover; border-radius: 10px;">
+                                                            </div>
+                                                            <div class="carousel-item">
+                                                                <img src="assets/images/s4.jpg"
                                                                     class="d-block w-100" alt="静岡支社3"
                                                                     style="height: 300px; object-fit: cover; border-radius: 10px;">
                                                             </div>
@@ -509,12 +507,6 @@
                                                         <h4>静岡支社</h4>
                                                         <p>静岡県内の企業様との取引を中心に、人材派遣・紹介事業を展開しています。地域密着型のサービスで、静岡の経済発展に貢献しています。
                                                         </p>
-                                                        <div class="icon-button">
-                                                            <a href="#" data-bs-toggle="modal"
-                                                                data-bs-target="#shizuokaModal"><i
-                                                                    class="fa fa-info-circle"></i>
-                                                                詳細を見る</a>
-                                                        </div>
                                                     </div>
                                                 </div>
                                             </div>
@@ -549,18 +541,13 @@
                                                         </div>
                                                         <div class="carousel-inner">
                                                             <div class="carousel-item active">
-                                                                <img src="assets/images/office-nagoya-1.jpg"
+                                                                <img src="assets/images/n1.jpg"
                                                                     class="d-block w-100" alt="名古屋支社1"
                                                                     style="height: 300px; object-fit: cover; border-radius: 10px;">
                                                             </div>
                                                             <div class="carousel-item">
-                                                                <img src="assets/images/office-nagoya-2.jpg"
+                                                                <img src="assets/images/n2.jpg"
                                                                     class="d-block w-100" alt="名古屋支社2"
-                                                                    style="height: 300px; object-fit: cover; border-radius: 10px;">
-                                                            </div>
-                                                            <div class="carousel-item">
-                                                                <img src="assets/images/office-nagoya-3.jpg"
-                                                                    class="d-block w-100" alt="名古屋支社3"
                                                                     style="height: 300px; object-fit: cover; border-radius: 10px;">
                                                             </div>
                                                         </div>
@@ -583,12 +570,6 @@
                                                         <h4>名古屋支社</h4>
                                                         <p>中部地方の製造業を中心とした企業様に人材サービスを提供しています。自動車産業をはじめとする多様な業界に対応しています。
                                                         </p>
-                                                        <div class="icon-button">
-                                                            <a href="#" data-bs-toggle="modal"
-                                                                data-bs-target="#nagoyaModal"><i
-                                                                    class="fa fa-info-circle"></i>
-                                                                詳細を見る</a>
-                                                        </div>
                                                     </div>
                                                 </div>
                                             </div>
@@ -623,18 +604,13 @@
                                                         </div>
                                                         <div class="carousel-inner">
                                                             <div class="carousel-item active">
-                                                                <img src="assets/images/office-osaka-1.jpg"
+                                                                <img src="assets/images/o1.jpg"
                                                                     class="d-block w-100" alt="大阪支社1"
                                                                     style="height: 300px; object-fit: cover; border-radius: 10px;">
                                                             </div>
                                                             <div class="carousel-item">
-                                                                <img src="assets/images/office-osaka-2.jpg"
+                                                                <img src="assets/images/o2.jpg"
                                                                     class="d-block w-100" alt="大阪支社2"
-                                                                    style="height: 300px; object-fit: cover; border-radius: 10px;">
-                                                            </div>
-                                                            <div class="carousel-item">
-                                                                <img src="assets/images/office-osaka-3.jpg"
-                                                                    class="d-block w-100" alt="大阪支社3"
                                                                     style="height: 300px; object-fit: cover; border-radius: 10px;">
                                                             </div>
                                                         </div>
@@ -656,12 +632,6 @@
                                                     <div class="text-content">
                                                         <h4>大阪支社</h4>
                                                         <p>関西地方の企業様に人材派遣・紹介サービスを提供しています。IT、製造業、サービス業など幅広い業界に対応しています。</p>
-                                                        <div class="icon-button">
-                                                            <a href="#" data-bs-toggle="modal"
-                                                                data-bs-target="#osakaModal"><i
-                                                                    class="fa fa-info-circle"></i>
-                                                                詳細を見る</a>
-                                                        </div>
                                                     </div>
                                                 </div>
                                             </div>
@@ -696,18 +666,13 @@
                                                         </div>
                                                         <div class="carousel-inner">
                                                             <div class="carousel-item active">
-                                                                <img src="assets/images/office-okayama-1.jpg"
+                                                                <img src="assets/images/ok1.jpg"
                                                                     class="d-block w-100" alt="岡山オフィス1"
                                                                     style="height: 300px; object-fit: cover; border-radius: 10px;">
                                                             </div>
                                                             <div class="carousel-item">
-                                                                <img src="assets/images/office-okayama-2.jpg"
+                                                                <img src="assets/images/ok2.jpg"
                                                                     class="d-block w-100" alt="岡山オフィス2"
-                                                                    style="height: 300px; object-fit: cover; border-radius: 10px;">
-                                                            </div>
-                                                            <div class="carousel-item">
-                                                                <img src="assets/images/office-okayama-3.jpg"
-                                                                    class="d-block w-100" alt="岡山オフィス3"
                                                                     style="height: 300px; object-fit: cover; border-radius: 10px;">
                                                             </div>
                                                         </div>
@@ -729,12 +694,6 @@
                                                     <div class="text-content">
                                                         <h4>岡山オフィス</h4>
                                                         <p>中国地方の企業様に人材サービスを提供しています。地域の特性を活かしたサービスで、岡山の経済発展に貢献しています。</p>
-                                                        <div class="icon-button">
-                                                            <a href="#" data-bs-toggle="modal"
-                                                                data-bs-target="#okayamaModal"><i
-                                                                    class="fa fa-info-circle"></i>
-                                                                詳細を見る</a>
-                                                        </div>
                                                     </div>
                                                 </div>
                                             </div>
@@ -769,18 +728,13 @@
                                                         </div>
                                                         <div class="carousel-inner">
                                                             <div class="carousel-item active">
-                                                                <img src="assets/images/office-gunma-1.jpg"
+                                                                <img src="assets/images/g1.jpg"
                                                                     class="d-block w-100" alt="群馬オフィス1"
                                                                     style="height: 300px; object-fit: cover; border-radius: 10px;">
                                                             </div>
                                                             <div class="carousel-item">
-                                                                <img src="assets/images/office-gunma-2.jpg"
+                                                                <img src="assets/images/g2.jpg"
                                                                     class="d-block w-100" alt="群馬オフィス2"
-                                                                    style="height: 300px; object-fit: cover; border-radius: 10px;">
-                                                            </div>
-                                                            <div class="carousel-item">
-                                                                <img src="assets/images/office-gunma-3.jpg"
-                                                                    class="d-block w-100" alt="群馬オフィス3"
                                                                     style="height: 300px; object-fit: cover; border-radius: 10px;">
                                                             </div>
                                                         </div>
@@ -803,12 +757,6 @@
                                                         <h4>群馬オフィス</h4>
                                                         <p>群馬県内の企業様に人材派遣・紹介サービスを提供しています。製造業を中心とした地域の特性に合わせたサービスを展開しています。
                                                         </p>
-                                                        <div class="icon-button">
-                                                            <a href="#" data-bs-toggle="modal"
-                                                                data-bs-target="#gunmaModal"><i
-                                                                    class="fa fa-info-circle"></i>
-                                                                詳細を見る</a>
-                                                        </div>
                                                     </div>
                                                 </div>
                                             </div>
