--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
                                                 <button class="nav-link active" id="head-office-tab"
                                                     data-bs-toggle="tab" data-bs-target="#head-office" type="button"
                                                     role="tab" aria-controls="head-office"
-                                                    aria-selected="true">本社</button>
+                                                    aria-selected="true">東京本社</button>
                                             </li>
                                             <li class="nav-item" role="presentation">
                                                 <button class="nav-link" id="shizuoka-tab" data-bs-toggle="tab"
@@ -374,9 +374,9 @@
                                                 <div class="col-lg-3">
                                                     <div class="info-table">
                                                         <ul>
-                                                            <li>本社管理部門 <span>管理・総務</span></li>
-                                                            <li>本社企画推進室 <span>企画・戦略</span></li>
-                                                            <li>本社営業部 <span>営業・マーケティング</span></li>
+                                                            <li>東京本社管理部門 <span>管理・総務</span></li>
+                                                            <li>東京本社企画推進室 <span>企画・戦略</span></li>
+                                                            <li>東京本社営業部 <span>営業・マーケティング</span></li>
                                                             <li>所在地 <span>新宿NSビル</span></li>
                                                             <li>電話番号 <span>03-5909-4120</span></li>
                                                         </ul>
@@ -400,17 +400,17 @@
                                                         <div class="carousel-inner">
                                                             <div class="carousel-item active">
                                                                 <img src="assets/images/t1.jpg"
-                                                                    class="d-block w-100" alt="本社オフィス1"
+                                                                    class="d-block w-100" alt="東京本社"
                                                                     style="height: 300px; object-fit: cover; border-radius: 10px;">
                                                             </div>
                                                             <div class="carousel-item">
                                                                 <img src="assets/images/t2.jpg"
-                                                                    class="d-block w-100" alt="本社オフィス2"
+                                                                    class="d-block w-100" alt="東京本社"
                                                                     style="height: 300px; object-fit: cover; border-radius: 10px;">
                                                             </div>
                                                             <div class="carousel-item">
                                                                 <img src="assets/images/t3.jpg"
-                                                                    class="d-block w-100" alt="本社オフィス3"
+                                                                    class="d-block w-100" alt="東京本社"
                                                                     style="height: 300px; object-fit: cover; border-radius: 10px;">
                                                             </div>
                                                         </div>
@@ -430,7 +430,7 @@
                                                 </div>
                                                 <div class="col-lg-3">
                                                     <div class="text-content">
-                                                        <h4>本社</h4>
+                                                        <h4>東京本社</h4>
                                                         <p>東京都新宿区西新宿2丁目4番1号
                                                             新宿NSビル25階に位置する本社では、管理部門、企画推進室、営業部が一体となって事業を展開しています。最新の設備と快適な環境で、社員一人ひとりが力を発揮できる職場を提供しています。
                                                         </p>
