--- a/index.html
+++ b/index.html
@@ -374,11 +374,11 @@
                                                 <div class="col-lg-3">
                                                     <div class="info-table">
                                                         <ul>
-                                                            <li>東京本社管理部門 <span>管理・総務</span></li>
-                                                            <li>東京本社企画推進室 <span>企画・戦略</span></li>
-                                                            <li>東京本社営業部 <span>営業・マーケティング</span></li>
-                                                            <li>所在地 <span>新宿NSビル</span></li>
-                                                            <li>電話番号 <span>03-5909-4120</span></li>
+                                                            <li><i class="fa-solid fa-list-check"></i><span>・</span><i class="fa-solid fa-people-roof"></i> <span>管理・総務</span></li>
+                                                            <li><i class="fa-regular fa-calendar-check"></i><span>・</span> <i class="fa-solid fa-sliders"></i><span>企画・戦略</span></li>
+                                                            <li><i class="fa-solid fa-people-roof"></i><span>・</span> <i class="fa-solid fa-handshake"></i><span>営業・マーケティング</span></li>
+                                                            <li><i class="fa-solid fa-location-dot"></i><span>新宿NSビル</span></li>
+                                                            <li><i class="fa-solid fa-phone"></i><span>03-5909-4120</span></li>
                                                         </ul>
                                                     </div>
                                                 </div>
