アップデート

--- a/properties.html
+++ b/properties.html
@@ -47,17 +47,12 @@ https://templatemo.com/tm-591-villa-agency
       <div class="row">
         <div class="col-lg-8 col-md-8">
           <ul class="info">
-            <li><i class="fa fa-envelope"></i> info@company.com</li>
-            <li><i class="fa fa-map"></i> Sunny Isles Beach, FL 33160</li>
+            <li><i class="fa fa-envelope"></i> lis@lis21.co.jp</li>
+            <li><i class="fa fa-location-dot"></i>〒163-0825 東京都新宿区西新宿２丁目４番１号 新宿ＮＳビル２５階</li>
           </ul>
         </div>
         <div class="col-lg-4 col-md-4">
-          <ul class="social-links">
-            <li><a href="#"><i class="fab fa-facebook"></i></a></li>
-            <li><a href="https://x.com/minthu" target="_blank"><i class="fab fa-twitter"></i></a></li>
-            <li><a href="#"><i class="fab fa-linkedin"></i></a></li>
-            <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-          </ul>
+          <!-- SNS links removed -->
         </div>
       </div>
     </div>
@@ -71,17 +66,24 @@ https://templatemo.com/tm-591-villa-agency
                 <nav class="main-nav">
                     <!-- ***** Logo Start ***** -->
                     <a href="index.html" class="logo">
-                        <h1>Villa</h1>
+                        <img src="./assets/images/logo.png" alt="">
                     </a>
                     <!-- ***** Logo End ***** -->
                     <!-- ***** Menu Start ***** -->
                     <ul class="nav">
-                      <li><a href="index.html">Home</a></li>
-                      <li><a href="properties.html" class="active">Properties</a></li>
-                      <li><a href="property-details.html">Property Details</a></li>
-                      <li><a href="contact.html">Contact Us</a></li>
-                      <li><a href="#"><i class="fa fa-calendar"></i> Schedule a visit</a></li>
-                  </ul>   
+                        <li><a href="index.html">代表メッセージ</a></li>
+                        <li><a href="properties.html" class="active">四半期査定について</a></li>
+                        <li><a href="property-details.html">しごとナビ</a></li>
+                        <li><a href="contact.html">会社情報</a></li>
+                        <li><a href="#">各事業所のご紹介</a></li>
+                        <li><a href="#">トレーナーのご紹介</a></li>
+                        <li><a href="#">リーダー昇格者のご紹介</a></li>
+                        <li><a href="#">転職成功者の声</a></li>
+                        <li><a href="#">個人情報保護方針・取り扱い</a></li>
+                        <li><a href="#">派遣法に基づく公開情報</a></li>
+                        <li><a href="#">派遣スタッフ就業規則</a></li>
+                        <li><a href="#">お問い合わせ</a></li>
+                    </ul>
                     <a class='menu-trigger'>
                         <span>Menu</span>
                     </a>
@@ -313,8 +315,9 @@ https://templatemo.com/tm-591-villa-agency
   <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/js/isotope.min.js"></script>
   <script src="assets/js/owl-carousel.js"></script>
-  <script src="assets/js/counter.js"></script>
-  <script src="assets/js/custom.js"></script>
+   <script src="assets/js/counter.js"></script>
+   <script src="assets/js/custom.js"></script>
+   <script src="assets/js/page-top.js"></script>
 
-  </body>
+   </body>
 </html>
