--- a/property-details.html
+++ b/property-details.html
@@ -53,12 +53,7 @@ https://templatemo.com/tm-591-villa-agency
           </ul>
         </div>
         <div class="col-lg-4 col-md-4">
-          <ul class="social-links">
-            <li><a href="#"><i class="fab fa-facebook"></i></a></li>
-            <li><a href="https://x.com/minthu" target="_blank"><i class="fab fa-twitter"></i></a></li>
-            <li><a href="#"><i class="fab fa-linkedin"></i></a></li>
-            <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-          </ul>
+          <!-- SNS links removed -->
         </div>
       </div>
     </div>
@@ -309,8 +304,9 @@ https://templatemo.com/tm-591-villa-agency
   <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/js/isotope.min.js"></script>
   <script src="assets/js/owl-carousel.js"></script>
-  <script src="assets/js/counter.js"></script>
-  <script src="assets/js/custom.js"></script>
+   <script src="assets/js/counter.js"></script>
+   <script src="assets/js/custom.js"></script>
+   <script src="assets/js/page-top.js"></script>
 
-  </body>
+   </body>
 </html>
