アップデート

--- a/index.html
+++ b/index.html
@@ -249,11 +249,11 @@
                     <div class="row justify-content-center">
                         <div class="col-lg-10">
                             <div class="shigotonavi-section">
-                                <div class="logo-container">
-                                    <img src="./assets/images/shigotonavilogo.png" alt="shigotonavi-logo" class="shigotonavi-logo">
-                                </div>
+                                
                                 <div class="content-wrapper">
-                                    <h2 class="section-title">リス株式会社が誇る <br>「しごとナビ」</h2>
+                                    <h2 class="section-title">リス株式会社が誇る <br><div class="logo-container">
+                                        <img src="./assets/images/shigotonavilogo.png" alt="shigotonavi-logo" class="shigotonavi-logo">
+                                    </div></h2>
                                     <div class="description-box">
                                         <p class="main-description">2000年に求人ポータルサイト【しごとナビ】の開発に着手。現在では111万人の登録者にご利用頂いております。あらゆる業界・ 職種・雇用形態に対応する全方位型 <br> 求人サイトです。</p>
                                     </div>
