アップデート

--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                                         <img src="./assets/images/shigotonavilogo.png" alt="shigotonavi-logo" class="shigotonavi-logo">
                                     </div></h2>
                                     <div class="description-box">
-                                        <p class="main-description">2000年に求人ポータルサイト【しごとナビ】の開発に着手。現在では111万人の登録者にご利用頂いております。あらゆる業界・ 職種・雇用形態に対応する全方位型 <br> 求人サイトです。</p>
+                                        <p class="main-description">2000年に求人ポータルサイト【しごとナビ】の開発に着手。<br> 現在では111万人の登録者にご利用頂いております。<br> あらゆる業界・ 職種・雇用形態に対応する全方位型求人サイトです。</p>
                                     </div>
                                     <div class="features-grid">
                                         <div class="feature-item">
