--- a/lis_haken.html
+++ b/lis_haken.html
@@ -66,23 +66,23 @@ https://templatemo.com/tm-591-villa-agency
                 <nav class="main-nav">
                     <!-- ***** Logo Start ***** -->
                     <a href="index.html" class="logo">
-                        <img src="./assets/images/logo.png" alt="">
+                        <img src="./assets/images/logo.svg" alt="">
                     </a>
                     <!-- ***** Logo End ***** -->
                     <!-- ***** Menu Start ***** -->
                     <ul class="nav">
-                        <li><a href="index.html">代表メッセージ</a></li>
-                        <li><a href="properties.html" class="active">四半期査定について</a></li>
-                        <li><a href="property-details.html">しごとナビ</a></li>
-                        <li><a href="contact.html">会社情報</a></li>
-                        <li><a href="#">各事業所のご紹介</a></li>
-                        <li><a href="#">トレーナーのご紹介</a></li>
-                        <li><a href="#">リーダー昇格者のご紹介</a></li>
-                        <li><a href="#">転職成功者の声</a></li>
-                        <li><a href="#">個人情報保護方針・取り扱い</a></li>
-                        <li><a href="#">派遣法に基づく公開情報</a></li>
-                        <li><a href="#">派遣スタッフ就業規則</a></li>
-                        <li><a href="#">お問い合わせ</a></li>
+                        <li><a href="index.html#message">代表メッセージ</a></li>
+                        <li><a href="index.html#quarterly-assessment" class="active">四半期査定について</a></li>
+                        <li><a href="index.html#shigotonavi">しごとナビ</a></li>
+                        <li><a href="index.html#company-info">会社情報</a></li>
+                        <li><a href="index.html#offices">各事業所のご紹介</a></li>
+                        <li><a href="index.html#trainers">トレーナーのご紹介</a></li>
+                        <li><a href="index.html#leaders">リーダー昇格者のご紹介</a></li>
+                        <li><a href="index.html#voices">転職成功者の声</a></li>
+                        <li><a href="lis_person_policy.html">個人情報保護方針・取り扱い</a></li>
+                        <li><a href="lis_haken.html">派遣法に基づく公開情報</a></li>
+                        <li><a href="Labor-regulations.html">派遣スタッフ就業規則</a></li>
+                        <li><a href="inquiry.html">お問い合わせ</a></li>
                     </ul>
                     <a class='menu-trigger'>
                         <span>Menu</span>
@@ -299,15 +299,61 @@ https://templatemo.com/tm-591-villa-agency
     </div>
   </div>
 
-  <footer>
+  <footer class="footer-section">
     <div class="container">
-      <div class="col-lg-12">
-        <p>Copyright © 2048 Villa Agency Co., Ltd. All rights reserved. 
-        
-        Design: <a rel="nofollow" href="https://templatemo.com" target="_blank">TemplateMo</a></p>
+      <div class="footer-content">
+        <!-- Left Section - Company Info -->
+        <div class="footer-left">
+          <div class="footer-logo">
+            <a href="index.html">
+              <img src="./assets/images/logo.svg" alt="LIS Logo" class="footer-logo-img">
+            </a>
+          </div>
+          <div class="footer-contact">
+            <p>〒163-0825 東京都新宿区西新宿2丁目4番1号 新宿NSビル</p>
+            <p>Tel. 03-5909-4120</p>
+            <p>Fax: 03-5909-4124</p>
+            <p>Email: lis@lis21.co.jp</p>
+          </div>
+        </div>
+
+        <!-- Right Section - Navigation Links -->
+        <div class="footer-right">
+          <div class="footer-column">
+            <h4>メニュー</h4>
+            <ul>
+              <li><a href="index.html#message">代表メッセージ</a></li>
+              <li><a href="index.html#shigotonavi">しごとナビ</a></li>
+              <li><a href="index.html#quarterly-assessment">四半期査定について</a></li>
+              <li><a href="index.html#company-info">会社情報</a></li>
+              <li><a href="index.html#offices">各事業所のご紹介</a></li>
+              <li><a href="index.html#trainers">トレーナーのご紹介</a></li>
+              <li><a href="index.html#leaders">リーダー昇格者のご紹介</a></li>
+              <li><a href="index.html#voices">転職成功者の声</a></li>
+            </ul>
+          </div>
+          <div class="footer-column">
+            <h4>その他</h4>
+            <ul>
+              <li><a href="lis_person_policy.html">個人情報保護方針・取り扱い</a></li>
+              <li><a href="lis_haken.html">派遣法に基づく公開情報</a></li>
+              <li><a href="Labor-regulations.html">派遣スタッフ就業規則</a></li>
+              <li><a href="inquiry.html">お問い合わせ</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      
+      <div class="footer-bottom">
+        <p>Copyright © LIS co.,ltd. ALL rights Reserved.</p>
       </div>
     </div>
   </footer>
+
+  <!-- Page Top Button -->
+  <a href="#" class="page-top-btn" id="page-top-btn">
+    <i class="fas fa-arrow-up"></i>
+  </a>
 
   <!-- Scripts -->
   <!-- Bootstrap core JavaScript -->
