すべてのリンクが修正されました。

--- a/lis_person_policy.html
+++ b/lis_person_policy.html
@@ -256,7 +256,7 @@ https://templatemo.com/tm-591-villa-agency
                       
                       <div class="term-item mb-4">
                         <h5 class="text-primary">■第12条　合意管轄</h5>
-                        <p>本規約の準拠法は日本法とします。本システム及び本規約に関連して、当社とユーザーとの間で生じた紛争については東京地方裁判所、又は東京簡易裁判所を第一審専属管轄裁判所とします。</p>
+                        <p>本規約の準拠法は日本法とします。本システム及び本規約に関連して、当社とユーザーとの間で生じた紛争については東京地方裁判所、又は東京簡易裁判所を第一審専属管轄裁判所とします。<br> 個人情報保護について当社は、個人情報を安全に取り扱う認証である「プライバシーマーク」を取得しております。よって、その基本規格であるJIS Q 15001に基づく下記明示事項にご同意の上、個人情報を提供いただきますよう、お願い申し上げます。</p>
                       </div>
                     </div>
                   </div>
@@ -274,7 +274,7 @@ https://templatemo.com/tm-591-villa-agency
                 </h2>
                 <div id="collapsePrivacy" class="accordion-collapse collapse" aria-labelledby="headingPrivacy" data-bs-parent="#privacyAccordion">
                   <div class="accordion-body">
-                    <p class="mb-4">当社は、個人情報を安全に取り扱う認証である「プライバシーマーク」を取得しております。よって、その基本規格であるJIS Q 15001に基づく下記明示事項にご同意の上、個人情報を提供いただきますよう、お願い申し上げます。</p>
+                    <!-- <p class="mb-4">当社は、個人情報を安全に取り扱う認証である「プライバシーマーク」を取得しております。よって、その基本規格であるJIS Q 15001に基づく下記明示事項にご同意の上、個人情報を提供いただきますよう、お願い申し上げます。</p> -->
                     
                     <div class="privacy-content">
                       <div class="privacy-item mb-4">
